json 的序列化测试，针对 Object 对象